--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <h1>DAVID MONTRICHER</h1>
                         <h3>Junior Full-Stack Web Developer</h3>
-                        <p>Currently creating web appplications using Ruby on Rails, Javascript & Backbone.js. I'm an open source contributor, architect, and explorer of the world.</p>
+                        <p>Currently creating web appplications using Ruby on Rails, Javascript & Backbone.js. I'm an open source contributor, architect, and explorer based in New York City.</p>
                     </div>
                     <!-- /About section -->
 
@@ -94,16 +94,13 @@
                 	<ul class="tabs">
                         <li class="tmenu"><a href="#profile" class="tab-profile"><i>&#x43;</i>Profile</a></li>
                         <li class="tmenu"><a href="#resume"><i>&#x3a;</i>Resume</a></li>
-                        <li class="tmenu"><a href="#portfolio"><i>&#x38;</i>Sites</a></li>
+                        <li class="tmenu"><a href="#portfolio"><i>&#x38;</i>Portfolio</a></li>
                         <li class="tmenu"><a href="#contact"><i>&#x21;</i>Contact</a></li>
                     </ul>
                     <a class="prev" id="menu-prev" href="#">&#xe073;</a>
                     <a class="next" id="menu-next" href="#">&#xe076;</a>
-
                 </nav>
                 <!-- /Menu -->
-
-
                 <!-- Resume -->
                 <section id="resume">
                 	 <div class="timeline-section">
@@ -122,9 +119,9 @@
                                     <h4>Business Analyst<span class="timelineDate">May 2012 – Apr 2014 (2 years)</span></h4>
                                     <h5>Advisors to the Financial Consulting Industry - New York, NY</h5>
                                     <p>
-                                    •   Lorem ipsum dolor sit amet, usu in magna errem, cibo qualisque signiferumque mei ei, ipsum vocent corpora nam id.
+                                    •   Managed the business analysis process in teams of two to four analysts in regards of process improvement, organizational change, strategic planning and policy development.
                                     <br />
-                                    •   Pro ne accumsan nominavi necessitatibus, mea cu vidit dignissim percipitur.</p>
+                                    •   Travel extensively throughout the Northeast US to meet with clients, project managers and industry specialists.</p>
                                 </div>
                             </li>
                             <li>
@@ -132,9 +129,9 @@
                                     <h4>Energy Researcher<span class="timelineDate">Apr 2010 – May 2012 (2 years)</span></h4>
                                     <h5>Terra-Gen Power, LLC - New York, NY</h5>
                                     <p>
-                                    •   Lorem ipsum dolor sit amet, usu in magna errem, cibo qualisque signiferumque mei ei, ipsum vocent corpora nam id.
+                                    •   Research and development of solar, wind and geothermal energy projects across the US.
                                     <br />
-                                    •   Pro ne accumsan nominavi necessitatibus, mea cu vidit dignissim percipitur.</p>
+                                    •   Mentored and supervised team of three analysts working in a solar energy project development for one year.</p>
                                 </div>
                             </li>
                             <li>
@@ -143,9 +140,9 @@
                                     <h4>Researcher<span class="timelineDate">Mar 2008 – Dec 2008 (10 months)</span></h4>
                                     <h5>United Nations - Geneva, Switzerland</h5>
                                     <p>
-                                    •   Lorem ipsum dolor sit amet, usu in magna errem, cibo qualisque signiferumque mei ei, ipsum vocent corpora nam id.
+                                    •   Explored the connections between urban development and human rights in India with exceptional mentors from Cornell and LSE.
                                     <br />
-                                    •   Pro ne accumsan nominavi necessitatibus, mea cu vidit dignissim percipitur.</p>
+                                    •   Traveled to remote areas of India to execute research analysis and data collection.</p>
                                 </div>
                             </li>
                             <div class="clear"></div>
@@ -228,6 +225,10 @@
                                 <h4>Node.js</h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
+                            <li>
+                                <h4>Ember.js</h4>
+                                <div class="rating" data-rat="3"></div>
+                            </li>
                         </ul>
                         <h3 class="main-heading">Applications & Tools</h3>
                         <ul class="skills">
@@ -259,7 +260,7 @@
                      <!-- /Skills -->
                      </div>
                      <div class="clear"></div>
-                     <a href="#" class="button transition">Download resume as PDF</a>
+                     <a href="http://bit.ly/montricher-resume" class="button transition">Download resume as PDF</a>
                 </section>
                 <!-- /Resume -->
 
@@ -351,7 +352,7 @@
 
             <!-- Footer -->
 			<footer>
-            	<div class="copyright">Copyright © 2014 David Montricher</div>
+            	<div class="copyright">Copyright © 2012-2014 David Montricher</div>
             </footer>
             <!-- /Footer -->
 
