Updates to resume and links

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <ul class="timeline">
                             <li>
                                 <div class="timelineUnit">
-                                    <h4>Web Development Immersive<span class="timelineDate"> Apr 2014 – Jul 2014 (3 months)</span></h4>
+                                    <h4><a href="http://bit.ly/montricher-wdi">Web Development Immersive</a><span class="timelineDate"> Apr 2014 – Jul 2014 (3 months)</span></h4>
                                     <h5>General Assembly</h5>
                                     <p>12-week web development immersive course building and deploying web applications using Ruby on Rails, Javascript, Backbone.js and other web frameworks.</p>
                                 </div>
@@ -155,15 +155,15 @@
 
                             <li>
                                 <div class="timelineUnit">
-                                    <h4>Environmental Policy and International Development<span class="timelineDate">2009 (1 year)</span></h4>
-                                    <h5>Harvard Extension School</h5>
+                                    <h4><a href="http://bit.ly/montricher-hes">Environmental Policy and International Development</a><span class="timelineDate">2009 (1 year)</span></h4>
+                                    <h5><a href="http://bit.ly/montricher-hes">Harvard Extension School</a></h5>
                                     <p>Professional graduate certificate studying climate change, resource scarcity, population growth, NGOs, and multinationals to move toward generating  meaningful policy solutions to environmental and international development issues.</p>
                                 </div>
                             </li>
                             <li>
                                 <div class="timelineUnit">
-                                    <h4>Architecture & Urban Development<span class="timelineDate">2007 (4 years)</span></h4>
-                                    <h5>Complutense University of Madrid / Polytechnic University of Madrid</h5>
+                                    <h4><a href="http://bit.ly/montricher-ucm">Architecture & Urban Development</a><span class="timelineDate">2007 (4 years)</span></h4>
+                                    <h5><a href="http://bit.ly/montricher-ucm">Complutense University of Madrid / Polytechnic University of Madrid</a></h5>
                                     <p>Foundation in architecture integrating critical thinking, design, technology, building, representation, social responsibility, creative and intellectual independence as well as commitment to architectural research.</p>
                                 </div>
                             </li>
