Updates to resume and links

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <!-- Social Icons -->
                 <ul class="socialicons">
                     <li class="socials-text">Connect</li>
-                	<li><a href="https://github.com/montricher" class="transition">&#x33;</a></li>
-                    <li><a href="https://twitter.com/deinonino" class="transition">&#x2c;</a></li>
-                    <li><a href="https://plus.google.com/u/0/108690184687048429682" class="transition">&#x2b;</a></li>
-                    <li><a href="https://angel.co/montricher" class="transition">&#x2a;</a></li>
+                	<li><a href="https://github.com/montricher" class="transition" target="_blank">&#x33;</a></li>
+                    <li><a href="https://twitter.com/deinonino" class="transition" target="_blank">&#x2c;</a></li>
+                    <li><a href="https://plus.google.com/u/0/108690184687048429682" class="transition" target="_blank">&#x2b;</a></li>
+                    <li><a href="https://angel.co/montricher" class="transition" target="_blank">&#x2a;</a></li>
                 </ul>
                 <!-- /Social Icons -->
             </header>
@@ -72,7 +72,7 @@
                         </div>
                         <h1>DAVID MONTRICHER</h1>
                         <h3>Junior Full-Stack Web Developer</h3>
-                        <p>Currently creating web appplications using Ruby on Rails, Javascript & Backbone.js. I'm an open source contributor, architect, and explorer based in New York City.</p>
+                        <p>Currently creating web appplications using <a href="http://bit.ly/montricher-rails">Ruby on Rails</a>, <a href="http://bit.ly/montricher-javascript">Javascript</a> & <a href="http://bit.ly/montricher-backbone">Backbone.js.</a> I'm an open source contributor, architect, and explorer based in New York City.</p>
                     </div>
                     <!-- /About section -->
 
@@ -110,7 +110,7 @@
                             <li>
                                 <div class="timelineUnit">
                                     <h4><a href="http://bit.ly/montricher-wdi">Web Development Immersive</a><span class="timelineDate"> Apr 2014 – Jul 2014 (3 months)</span></h4>
-                                    <h5>General Assembly</h5>
+                                    <h5><a href="http://bit.ly/montricher-wdi">General Assembly</a></h5>
                                     <p>12-week web development immersive course building and deploying web applications using Ruby on Rails, Javascript, Backbone.js and other web frameworks.</p>
                                 </div>
                             </li>
@@ -176,84 +176,84 @@
                         <h3 class="main-heading">Programming Skills</h3>
                         <ul class="skills">
                             <li>
-                                <h4>Javascript</h4>
+                                <h4><a href="http://bit.ly/montricher-javascript" target="_blank">Javascript</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>Ruby</h4>
+                                <h4><a href="http://bit.ly/montricher-ruby" target="_blank">Ruby</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>RSpec</h4>
+                                <h4><a href="http://bit.ly/montricher-rspec" target="_blank">RSpec</a></h4>
                                 <div class="rating" data-rat="5"></div>
                             </li>
                             <li>
-                                <h4>HTML5</h4>
+                                <h4><a href="http://bit.ly/montricher-html5" target="_blank">HTML5</a></h4>
                                 <div class="rating" data-rat="5"></div>
                             </li>
                             <li>
-                                <h4>CSS3</h4>
+                                <h4><a href="http://bit.ly/montricher-css3" target="_blank">CSS3</a></h4>
                                 <div class="rating" data-rat="4"></div>
                             </li>
                         </ul>
                         <h3 class="main-heading">Databases</h3>
                         <ul class="skills">
                             <li>
-                                <h4>PostgreSQL</h4>
+                                <h4><a href="http://bit.ly/montricher-postgresql" target="_blank">PostgreSQL</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>MongoDB</h4>
+                                <h4><a href="http://bit.ly/montricher-mongo" target="_blank">MongoDB</a></h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
                         </ul>
                         <h3 class="main-heading">Web Frameworks & Libraries</h3>
                         <ul class="skills">
                             <li>
-                                <h4>Ruby on Rails</h4>
+                                <h4><a href="http://bit.ly/montricher-rails" target="_blank">Ruby on Rails</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>jQuery</h4>
+                                <h4><a href="http://bit.ly/montricher-jquery" target="_blank">jQuery</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>Backbone.js</h4>
+                                <h4><a href="http://bit.ly/montricher-backbone" target="_blank">Backbone.js</a></h4>
                                 <div class="rating" data-rat="5"></div>
                             </li>
                             <li>
-                                <h4>Node.js</h4>
+                                <h4><a href="http://bit.ly/montricher-node" target="_blank">Node.js</a></h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
                             <li>
-                                <h4>Ember.js</h4>
+                                <h4><a href="http://bit.ly/montricher-ember" target="_blank">Ember.js</a></h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
                         </ul>
                         <h3 class="main-heading">Applications & Tools</h3>
                         <ul class="skills">
                             <li>
-                                <h4>Sublime Text 2</h4>
+                                <h4><a href="http://bit.ly/montricher-sublime" target="_blank">Sublime Text 2</a></h4>
                                 <div class="rating" data-rat="7"></div>
                             </li>
                             <li>
-                                <h4>Sinatra</h4>
+                                <h4><a href="http://bit.ly/montricher-sinatra" target="_blank">Sinatra</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>Git</h4>
+                                <h4><a href="http://bit.ly/montricher-git" target="_blank">Git</a></h4>
                                 <div class="rating" data-rat="6"></div>
                             </li>
                             <li>
-                                <h4>Heroku</h4>
+                                <h4><a href="http://bit.ly/montricher-heroku" target="_blank">Heroku</a></h4>
                                 <div class="rating" data-rat="4"></div>
                             </li>
                             <li>
-                                <h4>APIs</h4>
+                                <h4><a href="http://bit.ly/montricher-api" target="_blank">APIs</a></h4>
                                 <div class="rating" data-rat="4"></div>
                             </li>
                             <li>
-                                <h4>AWS</h4>
+                                <h4><a href="http://bit.ly/montricher-aws" target="_blank">AWS</a></h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
                         </ul>
@@ -317,7 +317,7 @@
                             <li>10 East 21st Street</li>
                             <li>New York, NY 10010<br /><br /></li>
                             <li>www.montricher.com</li>
-                            <li>david@montricher.com</li>
+                            <li><a href="mailto:david@montricher.com">david@montricher.com</a></li>
                             <li>+1 212 602 1844</li>
                         </ul>
                     </div>
@@ -352,7 +352,7 @@
 
             <!-- Footer -->
 			<footer>
-            	<div class="copyright">Copyright © 2012-2014 David Montricher</div>
+            	<div class="copyright">Copyright © 2012-2014 David Montricher. <a href="http://bit.ly/montricher-madeinny" target="_blank">Made in NY.</a></div>
             </footer>
             <!-- /Footer -->
 
