Links, portfolio, and animations

--- a/index.html
+++ b/index.html
@@ -277,28 +277,28 @@
                     <ul id="portfolio-list">
                         <li class="project applications">
                             <a href="http://www.github.com/montricher/pocketsquare" target="_new">
-                                <img src="portfolio/quiksilver.jpg" alt="Quiksilver" >
+                                <img src="portfolio/github.jpg" alt="Github" >
                                 <h2 class="title">Pocketsquare</h2>
                                 <span class="categorie">Projects / Application</span>
                             </a>
                     	</li>
                         <li class="project applications">
                             <a href="http://www.github.com/montricher/news-zones" target="_new">
-                                <img src="portfolio/quiksilver.jpg" alt="Quiksilver" >
+                                <img src="portfolio/github.jpg" alt="Github" >
                                 <h2 class="title">News-Zones</h2>
                                 <span class="categorie">Projects / Application</span>
                             </a>
                     	</li>
                         <li class="project applications">
                             <a href="http://www.github.com/montricher/urbandeals" target="_new">
-                                <img src="portfolio/quiksilver.jpg" alt="Quiksilver" >
+                                <img src="portfolio/github.jpg" alt="Github" >
                                 <h2 class="title">Urban-Deals</h2>
                                 <span class="categorie">Projects / Application</span>
                             </a>
                     	</li>
                         <li class="project applications">
                             <a href="http://www.github.com/montricher/project-4" target="_new">
-                                <img src="portfolio/quiksilver.jpg" alt="Quiksilver" >
+                                <img src="portfolio/github.jpg" alt="Github" >
                                 <h2 class="title">Project-4</h2>
                                 <span class="categorie">Projects / Application</span>
                             </a>
