Links, portfolio, and animations

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         <li><a href="" class="transition" data-filter=".project">Projects</a></li>
                         <li><a href="" class="transition" data-filter=".personal">Code Snippets</a></li>
                         <li><a href="" class="transition" data-filter=".opensource">Open Source</a></li>
-                        <li><a href="" class="transition" data-filter=".opensource">Blog Tutorials</a></li>
+                        <li><a href="" class="transition" data-filter=".blog">Blog Tutorials</a></li>
                     </ul>
                     <div class="extra-text">Some of the things I have been working on (and more coming soon)</div>
                     <ul id="portfolio-list">
@@ -296,13 +296,20 @@
                                 <span class="categorie">Projects / Application</span>
                             </a>
                     	</li>
-                        <li class="project applications">
-                            <a href="http://www.github.com/montricher/project-4" target="_new">
+                        <!-- <li class="project applications">
+                            <a href="http://www.github.com/montricher/" target="_new">
                                 <img src="portfolio/github.jpg" alt="Github" >
                                 <h2 class="title">Project-4</h2>
                                 <span class="categorie">Projects / Application</span>
                             </a>
                         </li>
+                        <li class="project applications">
+                            <a href="http://www.github.com/montricher/" target="_new">
+                                <img src="portfolio/github.jpg" alt="Github" >
+                                <h2 class="title">Project-5</h2>
+                                <span class="categorie">Projects / Application</span>
+                            </a>
+                        </li> -->
                     </ul>
                 </section>
                 <!-- /Portfolio -->
