--- a/index.html
+++ b/index.html
@@ -328,6 +328,15 @@
                             <li>+1 212 602 1844</li>
                         </ul>
                     </div>
+                    <!-- <div class="contact-social">
+                        <ul class="socialicons">
+                            <p><li class="socials-text">Connect</li></p>
+                            <p><li><a href="https://github.com/montricher" class="transition" target="_blank">&#x33;</a></li></p>
+                            <p><li><a href="https://twitter.com/deinonino" class="transition" target="_blank">&#x2c;</a></li></p>
+                            <p><li><a href="https://plus.google.com/u/0/108690184687048429682" class="transition" target="_blank">&#x2b;</a></li></p>
+                            <p><li><a href="https://angel.co/montricher" class="transition" target="_blank">&#x2a;</a></li></p>
+                        </ul>
+                    </div> -->
                     <!-- /Contact Info -->
 
                     <!-- Contact Form -->
