--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 	<ul class="personal-info">
 						<li><label>Call me</label><span>Dave</span></li>
                         <li><label>Speak</label><span>English, Italian, Spanish</span></li>
-                        <li><label>From</label><span>España!</span></li>
+                        <li><label>From</label><span>Thimphu</span></li>
                         <li><label>Lived in</label><span>Geneva, Buenos Aires,<br /><br /> Rio de Janeiro, Madrid</span></li>
                         <li><label>Email</label><span class="word-wrap"><a href="mailto:david@montricher.com">david@montricher.com</a></span></li>
                         <li><label>Phone</label><span>+1 212 602 1844</span></li>
