--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 	<ul class="personal-info">
 						<li><label>Call me</label><span>Dave</span></li>
                         <li><label>Speak</label><span>English, Italian, Spanish</span></li>
-                        <li><label>From</label><span><a href="http://bit.ly/montricher-taktsang">Taktsang Lhakhang</a></span></li>
+                        <li><label>From</label><span><a href="http://bit.ly/montricher-taktsang">Paro Taktsang</a></span></li>
                         <li><label>Lived in</label><span>Geneva, Buenos Aires,<br /><br /> Rio de Janeiro, Madrid</span></li>
                         <li><label>Email</label><span class="word-wrap"><a href="mailto:david@montricher.com">david@montricher.com</a></span></li>
                         <li><label>Phone</label><span>+1 212 602 1844</span></li>
@@ -111,7 +111,7 @@
                                 <div class="timelineUnit">
                                     <h4><a href="http://bit.ly/montricher-wdi">Web Development Immersive</a><span class="timelineDate"> Apr 2014 – Jul 2014 (3 months)</span></h4>
                                     <h5><a href="http://bit.ly/montricher-wdi">General Assembly</a></h5>
-                                    <p>12-week web development immersive course building and deploying web applications using Ruby on Rails, Javascript, Backbone.js and other web frameworks.</p>
+                                    <p>Twelve-week web development immersive course building and deploying web applications using Ruby on Rails, Javascript, Backbone.js and other web frameworks.</p>
                                 </div>
                             </li>
                             <li>
@@ -121,7 +121,7 @@
                                     <p>
                                     •   Managed the business analysis process in teams of two to four analysts in regards of process improvement, organizational change, strategic planning and policy development.
                                     <br />
-                                    •   Travel extensively throughout the Northeast US to meet with clients, project managers and industry specialists.</p>
+                                    •   Travel extensively throughout the Northeast US to work with clients, project managers and industry specialists.</p>
                                 </div>
                             </li>
                             <li>
@@ -129,9 +129,9 @@
                                     <h4>Energy Researcher<span class="timelineDate">Apr 2010 – May 2012 (2 years)</span></h4>
                                     <h5>Terra-Gen Power, LLC - New York, NY</h5>
                                     <p>
-                                    •   Research and development of solar, wind and geothermal energy projects across the US.
+                                    •   Research and development of solar, wind and geothermal energy projects in twelve different states.
                                     <br />
-                                    •   Mentored and supervised team of three analysts working in a solar energy project development for one year.</p>
+                                    •   Mentored and supervised a team of three analysts working in a solar energy project development for one year.</p>
                                 </div>
                             </li>
                             <li>
@@ -196,17 +196,6 @@
                                 <div class="rating" data-rat="4"></div>
                             </li>
                         </ul>
-                        <h3 class="main-heading">Databases</h3>
-                        <ul class="skills">
-                            <li>
-                                <h4><a href="http://bit.ly/montricher-postgresql" target="_blank">PostgreSQL</a></h4>
-                                <div class="rating" data-rat="6"></div>
-                            </li>
-                            <li>
-                                <h4><a href="http://bit.ly/montricher-mongo" target="_blank">MongoDB</a></h4>
-                                <div class="rating" data-rat="3"></div>
-                            </li>
-                        </ul>
                         <h3 class="main-heading">Web Frameworks & Libraries</h3>
                         <ul class="skills">
                             <li>
@@ -222,11 +211,30 @@
                                 <div class="rating" data-rat="5"></div>
                             </li>
                             <li>
+                                <h4><a href="http://bit.ly/montricher-underscore" target="_blank">Underscore.js</a></h4>
+                                <div class="rating" data-rat="5"></div>
+                            </li>
+                            <li>
+                                <h4><a href="http://bit.ly/montricher-d3" target="_blank">d3.js</a></h4>
+                                <div class="rating" data-rat="3"></div>
+                            </li>
+                            <li>
                                 <h4><a href="http://bit.ly/montricher-node" target="_blank">Node.js</a></h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
                             <li>
                                 <h4><a href="http://bit.ly/montricher-ember" target="_blank">Ember.js</a></h4>
+                                <div class="rating" data-rat="2"></div>
+                            </li>
+                        </ul>
+                        <h3 class="main-heading">Databases</h3>
+                        <ul class="skills">
+                            <li>
+                                <h4><a href="http://bit.ly/montricher-postgresql" target="_blank">PostgreSQL</a></h4>
+                                <div class="rating" data-rat="6"></div>
+                            </li>
+                            <li>
+                                <h4><a href="http://bit.ly/montricher-mongo" target="_blank">MongoDB</a></h4>
                                 <div class="rating" data-rat="3"></div>
                             </li>
                         </ul>
@@ -325,7 +333,14 @@
                             <li>New York, NY 10010<br /><br /></li>
                             <li>www.montricher.com</li>
                             <li><a href="mailto:david@montricher.com">david@montricher.com</a></li>
-                            <li>+1 212 602 1844</li>
+                            <li>+1 212 602 1844<br /><br /></li>
+                        <ul>
+                        </ul>
+                            <li><a href="http://bit.ly/montricher-github" target="_new">Github</a></li>
+                            <li><a href="http://bit.ly/montricher-angel" target="_new">AngelList</a></li>
+                            <li><a href="http://bit.ly/montricher-linkedin" target="_new">LinkedIn</a></li>
+                            <li><a href="http://bit.ly/montricher-twitter" target="_new">Twitter</a></li>
+                            <li><a href="https://plus.google.com/u/0/108690184687048429682" target="_new"></a>Google+</li>
                         </ul>
                     </div>
                     <!-- <div class="contact-social">
