Contact, mailer config

--- a/index.html
+++ b/index.html
@@ -330,17 +330,19 @@
                         <h3 class="main-heading"><span>Contact info</span></h3>
                     	<ul>
                             <li>10 East 21st Street</li>
-                            <li>New York, NY 10010<br /><br /></li>
+                            <li>New York, NY 10010</li>
+                            <br /><br />
                             <li>www.montricher.com</li>
                             <li><a href="mailto:david@montricher.com">david@montricher.com</a></li>
-                            <li>+1 212 602 1844<br /><br /></li>
+                            <li>+1 212 602 1844</li>
+                            <br /><br />
                         <ul>
                         </ul>
                             <li><a href="http://bit.ly/montricher-github" target="_new">Github</a></li>
                             <li><a href="http://bit.ly/montricher-angel" target="_new">AngelList</a></li>
                             <li><a href="http://bit.ly/montricher-linkedin" target="_new">LinkedIn</a></li>
                             <li><a href="http://bit.ly/montricher-twitter" target="_new">Twitter</a></li>
-                            <li><a href="https://plus.google.com/u/0/108690184687048429682" target="_new"></a>Google+</li>
+                            <li><a href="http://bit.ly/montricher-googleplus" target="_new">Google+</a></li>
                         </ul>
                     </div>
                     <!-- <div class="contact-social">
@@ -358,6 +360,10 @@
                     <div class="contact-form">
                         <h3 class="main-heading"><span>Let's get in touch</span></h3>
                         <div id="contact-status"></div>
+                        <form action="mailto:david@montricher.com">
+                            <input type="submit" value="Send me an email" class="button transition">
+                        </form>
+                        <br /><br />
                         <form action="" id="contactform">
                             <p>
                             	<label for="name">Your Name</label>
