Contact, mailer config

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <li><label>From</label><span><a href="http://bit.ly/montricher-taktsang">Paro Taktsang</a></span></li>
                         <li><label>Lived in</label><span>Geneva, Buenos Aires,<br /><br /> Rio de Janeiro, Madrid</span></li>
                         <li><label>Email</label><span class="word-wrap"><a href="mailto:david@montricher.com">david@montricher.com</a></span></li>
-                        <li><label>Phone</label><span>+1 212 602 1844</span></li>
+                        <li><label>Phone</label><span><a href="tel:+12126021844">+1 212 602 1844</a></span></li>
                     </ul>
                     <!-- /Personal info section -->
                 </div>
@@ -334,7 +334,7 @@
                             <br /><br />
                             <li>www.montricher.com</li>
                             <li><a href="mailto:david@montricher.com">david@montricher.com</a></li>
-                            <li>+1 212 602 1844</li>
+                            <li><a href="tel:+12126021844">+1 212 602 1844</a></li>
                             <br /><br />
                         <ul>
                         </ul>
@@ -389,7 +389,7 @@
 
             <!-- Footer -->
 			<footer>
-            	<div class="copyright">Copyright © 2012-2014 David Montricher. <a href="http://bit.ly/montricher-madeinny" target="_blank">Made in NY.</a></div>
+            	<div class="copyright">Copyright © 2012-2014 David Montricher. All rights reserved.<a href="http://bit.ly/montricher-madeinny" target="_blank">Made in NY.</a></div>
             </footer>
             <!-- /Footer -->
 
