--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>David Montricher</title>
+    <title>David Montricher | Web Developer</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -121,7 +121,7 @@
                                     <p>
                                     •   Managed the business analysis process in teams of two to four analysts in regards of process improvement, organizational change, strategic planning and policy development.
                                     <br />
-                                    •   Travel extensively throughout the Northeast US to work with clients, project managers and industry specialists.</p>
+                                    •   Travelled extensively throughout the Northeast US to work with clients, project managers and industry specialists.</p>
                                 </div>
                             </li>
                             <li>
@@ -129,7 +129,7 @@
                                     <h4>Energy Researcher<span class="timelineDate">Apr 2010 – May 2012 (2 years)</span></h4>
                                     <h5>Terra-Gen Power, LLC - New York, NY</h5>
                                     <p>
-                                    •   Research and development of solar, wind and geothermal energy projects in twelve different states.
+                                    •   Engaged in research and development of solar, wind and geothermal energy projects in twelve different states.
                                     <br />
                                     •   Mentored and supervised a team of three analysts working in a solar energy project development for one year.</p>
                                 </div>
@@ -142,7 +142,7 @@
                                     <p>
                                     •   Explored the connections between urban development and human rights in India with exceptional mentors from Cornell and LSE.
                                     <br />
-                                    •   Traveled to remote areas of India to execute research analysis and data collection.</p>
+                                    •   Travelled to remote areas of India to execute research analysis and data collection.</p>
                                 </div>
                             </li>
                             <div class="clear"></div>
