--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                 	<ul class="personal-info">
 						<li><label>Call me</label><span>Dave</span></li>
                         <li><label>Speak</label><span>English, Italian, Spanish</span></li>
-                        <li><label>From</label><span><a href="http://bit.ly/montricher-taktsang">Paro Taktsang</a></span></li>
+                        <!-- <li><label>From</label><span><a href="http://bit.ly/montricher-taktsang">Paro Taktsang</a></span></li> -->
+                        <li><label>From</label><span><a href="#">España!</a></span></li>
                         <li><label>Lived in</label><span>Geneva, Buenos Aires,<br /><br /> Rio de Janeiro, Madrid</span></li>
                         <li><label>Email</label><span class="word-wrap"><a href="mailto:david@montricher.com">david@montricher.com</a></span></li>
                         <li><label>Phone</label><span><a href="tel:+12126021844">+1 212 602 1844</a></span></li>
