--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             	<!-- Logo -->
             	<div id="logo">
                 	<h2>David Montricher</h2>
-                    <h4>Junior Web Developer Passionate About Creative Problem Solving and Innovation</h4>
+                    <h4>Software Engineer Passionate About Product Development and Innovation</h4>
                 </div>
                 <!-- /Logo -->
 
@@ -71,8 +71,8 @@
                             </ul>
                         </div>
                         <h1>DAVID MONTRICHER</h1>
-                        <h3>Junior Full-Stack Web Developer</h3>
-                        <p>Currently creating web appplications using <a href="http://bit.ly/montricher-rails">Ruby on Rails</a>, <a href="http://bit.ly/montricher-javascript">Javascript</a> & <a href="http://bit.ly/montricher-backbone">Backbone.js.</a> I'm an open source contributor, architect, and explorer based in New York City.</p>
+                        <h3>Software Engineer, Web Developer, Product Manager</h3>
+                        <p>Currently creating web appplications using <a href="http://bit.ly/montricher-rails">Ruby on Rails</a>, <a href="http://bit.ly/montricher-javascript">Javascript</a> & <a href="http://bit.ly/montricher-backbone">Backbone.js.</a> I'm an open source contributor, architect, and explorer based in New York.</p>
                     </div>
                     <!-- /About section -->
 
