--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </ul>
                         </div>
                         <h1>DAVID MONTRICHER</h1>
-                        <h3>Software Engineer, Web Developer, Product Manager</h3>
+                        <h3>Web Developer & Product Manager</h3>
                         <p>Currently creating web appplications using <a href="http://bit.ly/montricher-rails">Ruby on Rails</a>, <a href="http://bit.ly/montricher-javascript">Javascript</a> & <a href="http://bit.ly/montricher-backbone">Backbone.js.</a> I'm an open source contributor, architect, and explorer based in New York.</p>
                     </div>
                     <!-- /About section -->
