--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <div>
   <h3>
-    Hi there, I'm David Montricher, a web developer and product manager based in New York. I enjoy writing code to craft beautiful user experiences and web appplications for people at <a href="http://www.intuitive.nyc">Intuitive.</a>I want to keep the web open, so I contribute to open source and teach kids how to code. Find me on <a href="http://www.github.com/montricher">Github.</a>
+    Hi friendly visitor, I'm David Montricher, an independent web developer and product manager based in New York. I enjoy writing code to craft beautiful user experiences and web appplications for people at <a href="http://www.intuitive.nyc">Intuitive.</a> I want to keep the web open and accessible to all, so I contribute to open source and teach kids how to code. See my code on <a href="http://www.github.com/montricher">Github</a>, <a href="http://www.twitter.com/deinonino">tweet me here</a> and let's connect on <a href="http://www.twitter.com/deinonino">Linkedin</a>.
   </h3>
 </div>
 
